# butter2d

./: CITATION.cff  Cargo.toml  LICENSE  README.md
.github/workflows/: deploy-wasm-demo.yml  gh-pages.yml  release.yml
demo/: Cargo.toml
examples/: butter_worth_python.py  butterworth_example.rs
src/: butterworth.rs  lib.rs
tests/: compare_outputs.py  fft_analysis.py  filter_tests.rs  filtered_img_skimage.npy  npy_file.py
wasm_demo/: Cargo.toml  build.sh
wasm_demo/src/: lib.rs
wasm_demo/www/: index.html  index.js  styles.css
