workspace = { members = ["demo", "wasm_demo"] }
[package]
name = "butter2d"
version = "0.1.2"
edition = "2021"
authors = ["altunenes <enesaltun2@gmail.com>"]
license = "MIT"
rust-version = "1.77.2"
description = "Butterworth filter for image processing."
repository = "https://github.com/altunenes/butter2d"
documentation = "https://docs.rs/butter2d/latest/butter2d/"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
image = "0.25.1"
ndarray = "0.15.6"
num-complex = "0.4.4"
rustfft = "6.1.0"
fft2d = { version = "0.1.1", features = ["nalgebra"] }
nalgebra = "0.29"
itertools = "0.12.0"
ndarray-npy = "0.8.1"
