[package]
name = "demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nannou = "0.19.0"
nannou_osc = "0.19.0"
nannou_egui = "0.19.0"
butter2d = "0.1.1"
bytemuck = "1.15.0"
rfd = "0.14.1"
image = "0.24.8"
[[bin]]
name = "demo"
path = "src/main.rs"