[package]
name = "butter2d_wasm"
version = "0.1.0"
edition = "2021"
authors = ["enesaltun2@gmail.com"]
description = "WebAssembly demo for butter2d crate"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
butter2d = { path = ".." }
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
web-sys = { version = "0.3.64", features = [
    "console",
    "Document",
    "Element",
    "HtmlElement",
    "Node",
    "Window",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Blob",
    "Url",
    "HtmlImageElement",
    "FileReader",
    "FileList",
    "File",
]}
image = { version = "0.25.1", default-features = false, features = ["png", "jpeg"] }
base64 = "0.21.0"
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.2", features = ["js"] }
wee_alloc = { version = "0.4.5", optional = true }

[features]
default = ["wee_alloc"]

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true